# pedagoogle

./: .gitignore  MELHORIAS.md  README.md  teste1.docx
.github/instructions/: backend.instructions.md  frontend.instructions.md  release.instructions.md  rules.instructions.md
.github/prompts/: 01-componentes-input.prompt.md  02-componente-modal.prompt.md  03-sidebar-navigation.prompt.md  04-configuracoes.prompt.md  05-professores-turmas-alunos.prompt.md  06-materias.prompt.md  07-provas.prompt.md  08-atividades.prompt.md  09-notas.prompt.md  10-cronograma.prompt.md  11-dashboard-frequencia-limpeza.prompt.md  alunos-materias.prompt.md  configuracoes-extra.prompt.md  creation.prompt.md  cronograma-extra.prompt.md  dashboard.prompt.md  db-arquitetura.prompt.md  feature-toggles.prompt.md  melhorias-gerais.prompt.md  notas-extra.prompt.md  pdf-extra.prompt.md  professores.prompt.md  provas-banco.prompt.md  recuperacao-frequencia.prompt.md  regras-negocio.prompt.md  release.prompt.md
.github/workflows/: release.yml
src/: package-lock.json  package.json
src-tauri/: .taurignore  Cargo.toml  pedagoogle.db-shm  pedagoogle.db-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alunos.rs  atividades.rs  configuracoes.rs  cronograma.rs  dashboard.rs  db.rs  frequencia.rs  html_render.rs  lib.rs  main.rs  materias.rs  models.rs  notas.rs  pdf.rs  professores.rs  provas.rs  turmas.rs  typst_pdf.rs  word.rs
src/app/: globals.css  layout.tsx
src/app/(main)/: layout.tsx
src/components/: ColorPicker.tsx  IconPicker.tsx  Modal.tsx  PageHeader.tsx  Pagination.tsx  RichEditor.tsx  Sidebar.tsx  ThemeToggle.tsx  Toast.tsx
src/components/inputs/: InputCPF.tsx  InputCheckbox.tsx  InputData.tsx  index.ts  (+8 more)
src/hooks/: useCurrentPage.ts  useTheme.ts
src/lib/: navigation.ts
src/types/: index.ts  katex-auto-render.d.ts
src/utils/: tauri.ts
(+15 files in other folders)
