[package]
name = "pedagoogle"
version = "0.1.0"
edition = "2024"

[lib]
name = "pedagoogle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printpdf = { version = "0.7", features = ["embedded_images"] }
docx-rs = "0.4.19"
scraper = "0.23"
regex = "1"
base64 = "0.22"
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
png = "0.17"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
