[package]
name = "pedagoogle"
version = "1.2.2"
edition = "2024"

[lib]
name = "pedagoogle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printpdf = { version = "0.7", features = ["embedded_images"] }
docx-rs = "0.4.19"
scraper = "0.23"
regex = "1"
base64 = "0.22"
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
png = "0.17"
qrcode = "0.14"
image = { version = "0.25", features = ["png"] }
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
